<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="?attr/backgroundColor"
    tools:context="alphawolf.wolfpack.ajaysharvesh.kanithamizh.SettingsActivity">

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="?attr/cardBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings1"
                android:textStyle="bold"
                android:textColor="?attr/textColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings2"
                android:layout_marginTop="8dp"
                android:textColor="?attr/textColor"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="?attr/cardBackground"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?attr/textColor"
                android:text="@string/settings3"/>

            <RadioButton
                android:id="@+id/radioButton"
                android:textColor="?attr/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings4"
                android:layout_marginTop="8dp"
                android:buttonTint="?attr/tintColor"/>

            <CheckBox
                android:id="@+id/checkBox"
                android:textColor="?attr/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings5"
                android:buttonTint="?attr/tintColor"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings6"
                android:textColor="#fff"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="?attr/buttonColor"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="?attr/cardBackground"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textColor="?attr/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings7"
                android:textStyle="bold"/>

            <Switch
                android:id="@+id/mySwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings8"
                android:textColor="?attr/textColor"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
