<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    tools:context="alphawolf.wolfpack.ajaysharvesh.kanithamizh.Registrations.ResetPasscodeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center">

    <Button
        android:id="@+id/back1"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="150dp"
        android:background="@drawable/buttonstyle1"
        android:text="@string/back"/>

    <android.support.v7.widget.CardView
        android:id="@+id/linkCard"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginTop="-20dp"
                android:padding="10dp"
                android:src="@drawable/forgotcode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotcode"
                android:layout_marginBottom="15dp"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailID"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="320dp"
                android:drawableLeft="@drawable/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>


            <com.spark.submitbutton.SubmitButton
                android:id="@+id/changeCode"
                android:textSize="11sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/changeCode"
                android:textColor="@color/gray"
                app:sub_btn_background="@color/white"
                app:sub_btn_duration="2000"
                app:sub_btn_line_color="@color/green"
                app:sub_btn_ripple_color="@color/green"
                app:sub_btn_tick_color="@color/white" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>

